# nebulapicker

./: .dockerignore  .env.full  .env.local  .env.with_extractor  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  codecov.yml  docker-compose-full.yaml  docker-compose-with-extractor.yaml  docker-compose.yaml  pyproject.toml
apps/api/: .env  .env.dev  .env.full  Dockerfile  Makefile  pyproject.toml
apps/api/infrastructure/db/alembic/: env.py
apps/api/infrastructure/db/alembic/versions/: 294c820cfdad_add_updated_at_column_in_feeds_table.py  388f25958b67_create_image_url_in_feed_items_table.py  38977cc5cf52_add_link_operations.py  d72cadfdd73b_add_feed_item_is_active_column.py  dd3ce30a0a72_create_first_db_version.py
apps/api/src/: main.py
apps/api/src/adapters/: scheduler.py  wallabag_extractor.py
apps/api/src/adapters/entrypoints/v1/: exceptions.py  routes.py
apps/api/src/adapters/repositories/: feeds_repository.py  filters_repository.py  pickers_repository.py  sources_repository.py
apps/api/src/configs/: database.py  settings.py
apps/api/src/configs/dependencies/: repositories.py  services.py
apps/api/src/domain/handlers/: job_processors.py  operations.py
apps/api/src/domain/models/: feed.py  filter.py  job.py  picker.py  source.py
apps/api/src/domain/ports/: extractor_port.py  feeds_port.py  filters_port.py  pickers_port.py  sources_port.py
apps/api/src/domain/services/: extractor_service.py  feed_service.py  filter_service.py  job_service.py
apps/api/tests/integration/: test_main.py
apps/api/tests/unit/adapters/: test_wallabag_extractor.py
apps/api/tests/unit/adapters/repositories/: test_feeds_repository.py  test_filters_repository.py  (+2 more)
(+95 files in other folders)
